refactor Level, LevelsController, MusicSettings, Routines, MainMenuController, Step; simplify data structures, enhance readability, and improve error handling